tests/fixtures/errors/map_remove_while_view.z
# map_remove_while_view.z -- removing the key a live get-view points at
# is rejected (the view would dangle); only view+set was pinned before.
main: function is {
    m: (Map String value: String)
    m.set key: "k1".string value: "v1".string
    e: m.get key: "k1".string
    r: m.remove key: "k1".string
    match (e) case some then print "e=\{e}" case none then print "none"
    match (r) case some then print "removed" case none then print "rn"
}
